--- a/pom.xml
+++ b/pom.xml
@@ -37,8 +37,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.3</version>
 				<configuration>
-					<source>${jdk.version}</source>
-					<target>${jdk.version}</target>
+					<source>11</source>
+					<target>11</target>
 				</configuration>
 			</plugin>
 
