--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,12 @@
 		<jdk.version>1.6</jdk.version>
 		<spring.version>3.2.13.RELEASE</spring.version>
 		<jstl.version>1.2</jstl.version>
+		<sonar.host.url>http://34.16.133.153:9000/</sonar.host.url>
+    		<sonar.login>admin</sonar.login>
+    		<sonar.password>sonar123</sonar.password>
+    		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    		<maven.compiler.source>1.7</maven.compiler.source>
+    		<maven.compiler.target>1.7</maven.compiler.target>
 	</properties>
 
 	<dependencies>
